--- a/build.xml
+++ b/build.xml
@@ -158,6 +158,19 @@
         </RunJunit>
     </target>
 
+    <target name="testlab2" depends="testcompile" description="Run tests for lab1">
+        <RunJunit>
+	    <batchtest>
+		<fileset dir="${build.test}">
+		    <include name="simpledb/PredicateTest.class"/>
+		    <include name="simpledb/JoinPredicateTest.class"/>
+		    <include name="simpledb/FilterTest.class"/>
+		    <include name="simpledb/JoinTest.class"/>
+		</fileset>
+	    </batchtest>
+        </RunJunit>
+    </target>
+
     <target name="runtest" depends="testcompile"
             description="Runs the test you specify on the command line with -Dtest=">
         <!-- Check for -Dtest command line argument -->
