--- a/build.xml
+++ b/build.xml
@@ -166,6 +166,13 @@
 		    <include name="simpledb/JoinPredicateTest.class"/>
 		    <include name="simpledb/FilterTest.class"/>
 		    <include name="simpledb/JoinTest.class"/>
+		    <include name="simpledb/AggregateTest.class"/>
+		    <include name="simpledb/StringAggregateTest.class"/>
+		    <include name="simpledb/StringAggregatorTest.class"/>
+		    <include name="simpledb/IntegerAggregatorTest.class"/>
+		    <include name="simpledb/systemtest/FilterTest.class"/>
+		    <include name="simpledb/systemtest/JoinTest.class"/>
+		    <include name="simpledb/systemtest/AggregateTest.class"/>
 		</fileset>
 	    </batchtest>
         </RunJunit>
