--- a/build.xml
+++ b/build.xml
@@ -173,9 +173,12 @@
 		    <include name="simpledb/HeapPageWriteTest.class"/>
 		    <include name="simpledb/HeapFileWriteTest.class"/>
 		    <include name="simpledb/BufferPoolWriteTest.class"/>
+		    <include name="simpledb/InsertTest.class"/>
 		    <include name="simpledb/systemtest/FilterTest.class"/>
 		    <include name="simpledb/systemtest/JoinTest.class"/>
 		    <include name="simpledb/systemtest/AggregateTest.class"/>
+		    <include name="simpledb/systemtest/InsertTest.class"/>
+		    <include name="simpledb/systemtest/DeleteTest.class"/>
 		</fileset>
 	    </batchtest>
         </RunJunit>
